[tool.poetry]
name = "vacinometro-python"
version = "0.1.0"
description = "Pega informações sobre a vacinação."
authors = ["Rick <rick-stanley@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"